tests/scripts/errors/parse/trailing_comma_args.cdo
FUNCTION f(a, b,) { RETURN a + b; }
print(f(1, 2));
